--- a/packages/manager/modules/iam/src/components/policy/policy.template.html
+++ b/packages/manager/modules/iam/src/components/policy/policy.template.html
@@ -27,10 +27,10 @@
         >
             <oui-guide-menu-item
                 data-ng-repeat="guide in $ctrl.onboardingGuides track by $index"
-                data-href="{{:: guide.url }}"
+                data-href="{{:: guide.link }}"
                 data-external
             >
-                <span data-ng-bind=":: guide.text"></span>
+                <span data-ng-bind=":: guide.title"></span>
             </oui-guide-menu-item>
         </oui-guide-menu>
         <!-- </Guide> -->
