--- a/packages/manager/modules/pci/src/projects/project/storages/containers/add/components/associate-user-to-container/template.html
+++ b/packages/manager/modules/pci/src/projects/project/storages/containers/add/components/associate-user-to-container/template.html
@@ -131,13 +131,13 @@
         </oui-field>
 
         <!--User credential overview information-->
-        <pci-project-storages-user-credential-banner
+        <storages-components-user-credential-banner
+            data-is-new-user="true"
             data-ng-if="$ctrl.userModel.createMode.credential"
             data-user="$ctrl.userModel.createMode.user"
             data-credential="$ctrl.userModel.createMode.credential"
-            data-field-secret-key-label="$ctrl.fieldSecretKeyLabel"
-            data-is-new-user="true"
-        ></pci-project-storages-user-credential-banner>
+            data-field-secret-key-label="{{:: 'pci_projects_project_storages_containers_add_create_or_linked_user_success_field_secret_key' | translate}}"
+        ></storages-components-user-credential-banner>
 
         <!--Create user btns-->
         <div class="d-inline-block mb-1">
