feat(iam): add user management link
ref: MANAGER-10784

Signed-off-by: Guillaume Hyenne <guillaume.hyenne@ovhcloud.com>

--- a/packages/manager/modules/iam/src/components/policy/policy.template.html
+++ b/packages/manager/modules/iam/src/components/policy/policy.template.html
@@ -7,7 +7,7 @@
                     data-translate="iam_policy_header_tabs_item_policies"
                 ></span
             ></oui-header-tabs-item>
-            <oui-header-tabs-item
+            <oui-header-tabs-item data-href="{{ :: $ctrl.usersManagementLink }}"
                 ><span
                     data-translate="iam_policy_header_tabs_item_identities"
                 ></span
