feat(iam): add advanced mode on onboarding page
ref: MANAGER-11169

Signed-off-by: Guillaume Hyenne <guillaume.hyenne@ovhcloud.com>

--- a/packages/manager/modules/iam/src/components/onboarding/onboarding.template.html
+++ b/packages/manager/modules/iam/src/components/onboarding/onboarding.template.html
@@ -21,5 +21,11 @@
             rel="noopener"
         >
         </a>
+        <iam-advanced-mode-switch
+            data-advanced-mode="$ctrl.advancedMode"
+            data-alert="$ctrl.alert"
+            data-go-to="$ctrl.goTo"
+        >
+        </iam-advanced-mode-switch>
     </onboarding-description>
 </manager-on-boarding-layout>
