feat(iam): add advanced mode on datagrid policies
ref: MANAGER-11170

Signed-off-by: Guillaume Hyenne <guillaume.hyenne@ovhcloud.com>

--- a/packages/manager/modules/iam/src/components/policies/policies.template.html
+++ b/packages/manager/modules/iam/src/components/policies/policies.template.html
@@ -52,11 +52,22 @@
 
         <!-- <Topbar> -->
         <oui-datagrid-topbar>
-            <oui-button data-on-click="$ctrl.createPolicy()" class="mb-3">
+            <oui-button
+                data-on-click="$ctrl.createPolicy()"
+                class="mb-3 d-inline-block align-middle"
+            >
                 <span
                     data-translate="iam_policies_datagrid_topbar_create_policy"
                 ></span>
             </oui-button>
+
+            <iam-advanced-mode-switch
+                class="ml-4 d-inline-block"
+                data-advanced-mode="$ctrl.advancedMode"
+                data-alert="$ctrl.alert"
+                data-go-to="$ctrl.goTo"
+            >
+            </iam-advanced-mode-switch>
         </oui-datagrid-topbar>
         <!-- </Topbar> -->
     </oui-datagrid>
