fix(dedicated.pcc): use the translate value for data center range name
ref: MANAGER-11228

Signed-off-by: Guillaume Hyenne <guillaume.hyenne@ovhcloud.com>

--- a/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/datacenters/datacenters.html
+++ b/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/datacenters/datacenters.html
@@ -23,8 +23,10 @@
         </oui-datagrid-column>
         <oui-datagrid-column
             data-title=":: 'dedicatedCloud_datacenters_commercialRange' | translate"
-            property="commercialRange"
         >
+            <span
+                data-translate="{{ 'dedicatedCloud_datacenters_commercial_name_' + $row.commercialName }}"
+            ></span>
         </oui-datagrid-column>
         <oui-datagrid-column
             data-title=":: 'dedicatedCloud_datacenters_cpu' | translate"
