--- a/packages/manager/modules/pci/src/components/pci-code-sample/pci-code-sample.html
+++ b/packages/manager/modules/pci/src/components/pci-code-sample/pci-code-sample.html
@@ -1,10 +1,10 @@
 <pre class="dark w-100"><oui-button
-    class="ai-code-sample-button"
+    class="pci-code-sample-button"
     data-size="s" 
     data-variant="secondary" 
     data-on-click="$ctrl.updateTooltip()"
     data-oui-tooltip="{{$ctrl.tooltip}}"
     >
     <span class="oui-icon oui-icon-copy"></span>
-  </oui-button><code data-ng-class="['ai-code-sample-code', 'language-' + $ctrl.language]" data-ng-bind="$ctrl.code">
+  </oui-button><code data-ng-class="['pci-code-sample-code', 'language-' + $ctrl.language]" data-ng-bind="$ctrl.code">
 </code></pre>
