--- a/packages/manager/core/generator/app/templates/src/pages/details/[serviceName]/index.tsx.hbs
+++ b/packages/manager/core/generator/app/templates/src/pages/details/[serviceName]/index.tsx.hbs
@@ -1,15 +1,18 @@
 import React from 'react';
 import { useTranslation } from 'react-i18next';
-import { Heading } from '@chakra-ui/react';
+
+const Header: React.FC<{children: React.ReactNode}> = ({children}) => (
+  <h3>{children}</h3>
+)
 
 export default function {{pascalCase appName}}Dashboard() {
   const { t } = useTranslation('{{appName}}/details/dashboard');
 
   return (
     <div>
-      <Heading as="h3" size="sm">
+      <Header>
         {t('title')}
-      </Heading>
+      </Header>
     </div>
   );
 }
