--- a/packages/manager/core/generator/app/templates/src/pages/details/[serviceName]/tab.tsx.hbs
+++ b/packages/manager/core/generator/app/templates/src/pages/details/[serviceName]/tab.tsx.hbs
@@ -1,4 +1,3 @@
-import { Heading } from '@chakra-ui/react';
 import i18next from 'i18next';
 import React from 'react';
 import { useTranslation } from 'react-i18next';
@@ -7,14 +6,18 @@ export function breadcrumb() {
   return i18next.t('{{appName}}/details/tab:crumb');
 }
 
+const Header: React.FC<{children: React.ReactNode}> = ({children}) => (
+  <h3>{children}</h3>
+)
+
 export default function {{pascalCase appName}}Tab() {
   const { t } = useTranslation('{{appName}}/details/tab');
 
   return (
     <>
-      <Heading as="h3" size="sm">
+      <Header>
         {t('title')}
-      </Heading>
+      </Header>
       Rename me by:
       <ul>
         <li>changing my file name by the route path you want</li>
