--- a/packages/manager/modules/iam/src/components/deleteEntity/deleteEntity.template.html
+++ b/packages/manager/modules/iam/src/components/deleteEntity/deleteEntity.template.html
@@ -24,6 +24,7 @@
                     class="d-block"
                     data-ng-bind=":: $ctrl.entity.data.name"
                 ></strong>
+                <div data-ng-transclude></div>
                 <form
                     class="mt-3"
                     name="$ctrl.form"
