--- a/packages/manager/modules/iam/src/components/policies/policies.template.html
+++ b/packages/manager/modules/iam/src/components/policies/policies.template.html
@@ -23,9 +23,9 @@
             <span data-ng-bind="$row.identities.length"></span>
         </oui-datagrid-column>
         <oui-datagrid-column
-            data-title="'iam_policies_datagrid_column_resources' | translate"
+            data-title="'iam_policies_datagrid_column_actions' | translate"
         >
-            <span data-ng-bind="$row.resources.length"></span>
+            <span data-ng-bind="$row.permissions.allow.length"></span>
         </oui-datagrid-column>
         <!-- </Columns> -->
 
