fix(generator): delete breadcrumb package + do some fixes on the generator
ref: MANAGER-11267

Signed-off-by: Nicolas Pierre-charles <nicolas@nicode.fr>

--- a/packages/manager/core/generator/app/templates/src/pages/details/[serviceName]/_layout.tsx.hbs
+++ b/packages/manager/core/generator/app/templates/src/pages/details/[serviceName]/_layout.tsx.hbs
@@ -1,10 +1,7 @@
 import React from 'react';
 import { useTranslation } from 'react-i18next';
 import { NavLink, Outlet, useParams, useResolvedPath } from 'react-router-dom';
-
-import Breadcrumb, {
-  BreadcrumbHandleParams,
-} from '@ovh-ux/manager-react-breadcrumb';
+import Breadcrumb, {BreadcrumbHandleParams} from '../../../components/Breadcrumb';
 
 export function breadcrumb({ params }: BreadcrumbHandleParams) {
   return params.serviceName;
