--- a/packages/manager/core/generator/app/templates/src/index.tsx.hbs
+++ b/packages/manager/core/generator/app/templates/src/index.tsx.hbs
@@ -1,3 +1,3 @@
 import { startApplication } from '@ovh-ux/manager-react-core-application';
 
-startApplication('dedicated');
+startApplication('{{ appName }}');
