--- a/packages/manager/core/generator/app/templates/src/pages/details/[serviceName]/_layout.tsx.hbs
+++ b/packages/manager/core/generator/app/templates/src/pages/details/[serviceName]/_layout.tsx.hbs
@@ -1,7 +1,9 @@
 import React from 'react';
 import { useTranslation } from 'react-i18next';
 import { NavLink, Outlet, useParams, useResolvedPath } from 'react-router-dom';
-import Breadcrumb, {BreadcrumbHandleParams} from '../../../components/Breadcrumb';
+import Breadcrumb, {
+  BreadcrumbHandleParams,
+} from '../../../components/Breadcrumb';
 
 export function breadcrumb({ params }: BreadcrumbHandleParams) {
   return params.serviceName;
