feat(generator): update template vite js
ref: MANAGER-11306

Signed-off-by: Alex Boungnaseng <alex.boungnaseng.ext@corp.ovh.com>

--- a/packages/manager/core/generator/app/conditional-templates/onboarding/index.tsx.hbs
+++ b/packages/manager/core/generator/app/conditional-templates/onboarding/index.tsx.hbs
@@ -1,12 +1,13 @@
 import React from 'react';
 import { useTranslation } from 'react-i18next';
 
-export default function {{pascalCase appName}}Onboarding() {
-  const { t } = useTranslation('{{appName}}/onboarding');
+export default function Onboarding() {
+  const { t } = useTranslation('{{appName}}');
 
   return (
     <div>
       <h1>{t('title')}</h1>
+      <div>Onboarding page</div>
     </div>
   );
 }
