--- a/packages/manager/core/generator/app/conditional-templates/dashboard/index.tsx.hbs
+++ b/packages/manager/core/generator/app/conditional-templates/dashboard/index.tsx.hbs
@@ -1,13 +1,13 @@
 import React from 'react';
 import { useTranslation } from 'react-i18next';
 
-export default function {{pascalCase appName}}() {
+export default function Dashboard() {
   const { t } = useTranslation('{{appName}}');
 
   return (
     <div>
       <h1>{t('title')}</h1>
-      <div>Start your application</div>
+      <div>Dashboard page</div>
     </div>
   );
 }
